--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -32,12 +33,22 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+    <header class = "row">
+      <div class = "row">
       </div>
-    </div>
+      <div class = "four columns">
+        <img src = "images/tomato.jpg" class = "logo">
+      </div>
+      <div class = "eight columns">
+      </div>
+      I am the head of the page
+    </header>
+    <main class = "row">
+      I am the body of the page
+    </main>
+    <footer class = "row">
+      I am the footer of the page
+    </footer>
   </div>
 
 <!-- End Document
