add main content to site

--- a/index.html
+++ b/index.html
@@ -34,20 +34,28 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <header class = "row">
-      <div class = "row">
-      </div>
       <div class = "four columns">
         <img src = "images/tomato.jpg" class = "logo">
       </div>
       <div class = "eight columns">
+        <ul class = "u-pull-right">
+          <li class ="navItem">Link one</li>
+          <li class ="navItem">Link two</li>
+          <li class ="navItem">Link three</li>
+        </ul>
       </div>
-      I am the head of the page
     </header>
     <main class = "row">
-      I am the body of the page
+      <div class = "one-half column">
+        adsflajsdflasdjfas
+      </div>
+      <div class = "one-half column">
+        asdflajslsvjasldkf
+      </div>
+
     </main>
     <footer class = "row">
-      I am the footer of the page
+
     </footer>
   </div>
 
